data/gnupg-users/ethansherriff_hotmail_co_uk.txt

@_date: 2014-12-07 22:52:09
@_author: Ethan Sherriff 
@_subject: Compiling GnuPG-2.1.0 on Mac OS X Yosemite (10.10.1) - Linking Errors 
Hello all, sorry if I?m on the wrong mailing list, I?m new to mailing-lists, this is my first.
For a couple of weeks now, I?ve been trying to solve a linking error while building GnuPG-2.1.0 (modern). Make outputs:
    make[2]: Entering directory '/Users/Ethan/Documents/Programming/Third_Party_Software_and_Libraries/GnuPG/gnupg-2.1.0-build/g10'
    gcc -I/usr/local/include -I/usr/local/include -I/usr/local/include -g -O2 -Wall -Wno-pointer-sign -Wpointer-arith   -o gpg2 gpg.o server.o build-packet.o compress.o compress-bz2.o free-packet.o getkey.o keydb.o keyring.o seskey.o kbnode.o mainproc.o armor.o mdfilter.o textfilter.o progress.o misc.o rmd160.o openfile.o keyid.o parse-packet.o cpr.o plaintext.o sig-check.o keylist.o pkglue.o ecdh.o pkclist.o skclist.o pubkey-enc.o passphrase.o decrypt.o decrypt-data.o cipher.o encrypt.o sign.o verify.o revoke.o keyedit.o dearmor.o import.o export.o migrate.o delkey.o keygen.o helptext.o keyserver.o call-dirmngr.o photoid.o call-agent.o trust.o trustdb.o tdbdump.o tdbio.o card-util.o exec.o ../kbx/libkeybox.a ../common/libcommon.a ../gl/libgnu.a ../common/libgpgrl.a -lz -lbz2     -L/usr/local/lib -lgcrypt -lgpg-error  -L/usr/local/lib -lksba -lgpg-error -lassuan -L/usr/local/lib -lgpg-error -L/usr/local/lib -lgpg-error -L/usr/local/gnupg-2.1.0/lib -liconv       ld: warning: ld: warning: ignoring file ../common/libgpgrl.a, file was built for archive which is not the architecture being linked (x86_64): ../common/libgpgrl.aignoring file ../gl/libgnu.a, file was built for archive which is not the architecture being linked (x86_64): ../gl/libgnu.a
    Undefined symbols for architecture x86_64:
      "_gnupg_rl_initialize", referenced from:
          _main in gpg.o
I?ve tried:
    - Building everything as 32-bit (again compiles, but stops on same error).
    - Building in a folder that?s not the source directory (like you would with gcc).
    - Giving GnuPG and its dependancies a separate prefix (/usr/local/gnupg-2.1.0)
    - Forcing 64-bit compilation (CFLAGS=?-arch x86_64 -m64? and CXXFLAGS=?-arch x86_64 -m64? for ./configure and make), but the build fails earlier on.
Any insights would be greatly appreciated, and if you would like I have a question on StackOverflow  if you prefer to answer there.

@_date: 2015-04-12 23:00:43
@_author: Ethan Sherriff 
@_subject: GnuPG 2.1.3 Fails to Compile OS X 
Sorry didn't see what you said about the error occuring with GNU GCC, what version are you using? On OS X Yosemite 10.10.3 (Latest Public Beta 14D131, XCode 6.3 6D570), with GNU GCC 4.9.2 installed from source, gnupg-2.1.3 builds fine.
Sent: ?12/?04/?2015 21:01
Hey Werner,
Thanks for the new release!
I'm having some issues making it compile on OS X, right across
10.8-10.10.3. Tried both Apple's Clang and GNU's GCC so I'm presuming
the error isn't compiler-specific.
It's throwing slightly different errors on OS X 10.8 than it is on 10.9
and 10.10. The 10.8 error is:
t-stringhelp.c:488:3: error: function definition is not allowed here
  {
  ^
t-stringhelp.c:536:4: error: expected ';' at end of declaration
  }
   ^
   ;
2 errors generated.
make[3]: *** [t-stringhelp.o] Error 1
And the 10.9 - 10.10.3 error is just:
t-stringhelp.c:488:3: error: function definition is not allowed here
  {
  ^
1 error generated.
make[3]: *** [t-stringhelp.o] Error 1
Have attached various compile logs.
Sent from OS X. If you wish to communicate more securely my PGP Public
Key is 0x872524db9d74326c.
